# AgentRadar

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  RESUME_BULLETS.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  scaffold.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml
apps/dashboard/: Dockerfile  Dockerfile.dockerignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
apps/dashboard/src/components/: CountsCard.tsx  DigestTimelineCard.tsx  DigestsTab.tsx  HealthCard.tsx  LatestDigestCard.tsx  LatestForecastsCard.tsx  QuickLinksCard.tsx  RecentActivityCard.tsx  SourceBreakdownCard.tsx  Tabs.tsx  TopConceptsCard.tsx
apps/dashboard/src/components/ui/: badge.tsx  card.tsx  skeleton.tsx
config/scouts/: tavily_queries.yaml  trend_github.yaml  trend_hn.yaml  trend_labs.yaml
infra/neo4j/init/: 01_schema.cypher
infra/nginx/: Dockerfile  Dockerfile.dockerignore  nginx.conf
infra/postgres/init/: 01_schema.sql
scripts/: critic.py  forecaster_digest.py  forecaster_once.py  forecaster_topn.py  mcp_demo.py  scout_arxiv.py  scout_tavily.py
services/api/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
services/api/src/agentradar_api/: __init__.py  main.py  mcp_tools.py  rest.py
services/mcp-server/: pyproject.toml
services/mcp-server/src/agentradar_mcp/: __init__.py  server.py
services/supervisor/: Dockerfile  pyproject.toml
services/supervisor/src/agentradar_supervisor/: __init__.py  __main__.py  config_loader.py  graph.py  nodes.py  query_planner.py  runtime.py  schedule.py  state.py
services/supervisor/src/agentradar_supervisor/agents/: __init__.py  base.py  critic.py  forecaster.py
services/supervisor/src/agentradar_supervisor/agents/scout/: __init__.py  arxiv.py  tavily.py  trends.py
services/supervisor/src/agentradar_supervisor/agents/trend_sources/: __init__.py  base.py  github.py  hn.py  lab_rss.py
tests/: conftest.py
tests/integration/: conftest.py  test_forecaster_integration_session2.py  test_mcp_server  test_mcp_tools.py  test_pgvector_similarity.py  test_proposer_critic_gate.py  test_race_semantics.py  test_schema_constraints.py  test_store_neo4j.py  test_store_postgres.py  test_store_s3.py
tests/test-runner/: Dockerfile.test
tests/unit/: test_config_loader.py  test_core_config.py  test_core_logging.py  test_core_types.py  test_critic_stages.py  test_forecaster_agent.py  test_forecaster_agent_composite.py  test_forecaster_nodes.py  test_forecaster_nodes_composite.py  test_forecaster_state.py  test_forecaster_state_session2.py  test_query_planner.py  test_scout_arxiv_pipeline.py  test_scout_tavily_pipeline.py  test_scout_trends_sources.py  test_store_lazy_singletons.py  test_store_pure_helpers.py  test_supervisor_runtime.py
