# Root pyproject.toml — workspace coordinator only.
# This file is NOT itself a Python package; it does not have a [project] section.

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]
# 'apps/*' is intentionally excluded — apps/dashboard is a Next.js project.

[tool.uv.sources]
agentradar-core  = { workspace = true }
agentradar-store = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "mypy>=1.11",
    "types-boto3>=1.0",
    # Scout dependencies
    "feedparser>=6.0",          # arXiv RSS parsing
    "httpx>=0.27",              # async HTTP
    "anthropic[bedrock]>=0.40", # SLM via Bedrock for concept extraction
    "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Shared tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["apps/dashboard"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Tests use a lot of fixture wrangling that triggers false positives
"tests/**" = ["B011", "N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests requiring the live data plane (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
    "packages/agentradar-core/src",
    "packages/agentradar-store/src",
    "services/mcp-server/src",
    "services/supervisor/src",
    "services/api/src",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mcp.*", "neo4j.*", "asyncpg.*", "pgvector.*"]
ignore_missing_imports = true
