[project]
name = "agentradar-api"
version = "0.1.0"
description = "FastAPI app exposing AgentRadar's MCP tools and REST surface."
requires-python = ">=3.12"
dependencies = [
    "agentradar-core",
    "agentradar-store",
    "fastmcp>=2.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
agentradar-api = "agentradar_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentradar_api"]