[project]
name = "agentradar-mcp"
version = "0.1.0"
description = "MCP server exposing the AgentRadar knowledge store as tools."
requires-python = ">=3.12"
dependencies = [
    "agentradar-core",
    "agentradar-store",
    "fastmcp>=2.10",
]

[project.scripts]
agentradar-mcp = "agentradar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentradar_mcp"]