[project]
name = "agentradar-supervisor"
version = "0.1.0"
description = "Long-running supervisor that schedules and runs AgentRadar's specialist agents."
requires-python = ">=3.12"
dependencies = [
    "agentradar-core",
    "agentradar-store",
    "fastmcp>=2.10",
    "feedparser>=6.0",
    "httpx>=0.27",
]

[project.scripts]
agentradar-supervisor = "agentradar_supervisor.runtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentradar_supervisor"]